--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
         <ul class="listnone">
           <li><%= link_to "À propos de nous", about_path %></li>
           <li><%= link_to "Services", services_path %></li>
-          <li><%= link_to "Contact", contact_path %></li>
+          <li><%= link_to "Contact", new_contact_path %></li>
         </ul>
       </div>
       <div class="col-md-3 footer-widget">
