--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
             </div>
           </div>
           <div class="col-md-4 text-right">
-              <%= link_to "Devis", contact_path, class: "btn btn-default" %>
+              <%= link_to "Devis", new_contact_path, class: "btn btn-default" %>
           </div>
         </div>
       </div>
@@ -34,7 +34,7 @@
         <li><%= link_to "À propos", about_path, class: "animsition-link" %></li>
         <li><%= link_to "Services", services_path, class: "animsition-link" %></a>
         </li>
-        <li><%= link_to "Contact", contact_path, class: "animsition-link" %>
+        <li><%= link_to "Contact", new_contact_path, class: "animsition-link" %>
         </li>
       </ul>
     </div>
