fix buttons - active

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -50,6 +50,12 @@
     color: #EDEFEF;
 }
 
+.flexnav a:active {
+    background-color: #39464F;;
+    color: #EDEFEF;
+}
+
+
 .breadcrumb a:hover {
     color: #FB816A;
 }
