add pricing section

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -194,6 +194,16 @@
    color: #FB816A; 
 }
 
+//******** Pricing Page **********//
+//*****************************//
+
+.pricing-head {
+    background-color: #406784;
+}
+
+.check-circle li:before {
+    color: #FB816A;
+}
 //*************Footer****************8
 
 
