--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="slider-captions">
           <h1 class="slider-title">Besoin d'un accessoire pour votre appareil mobile ?</h1>
-          <p class="slider-text">Nous avons une grande variété d’étuis, d'écrans protecteurs, de chargeurs et plusieurs autres accessoires pour tous types  d’appareils</p>
+          <p class="slider-text">Nous avons une grande variété d’étuis, d'écrans protecteurs, de chargeurs et plusieurs autres accessoires pour tous types d’appareils</p>
         </div>
       </div>
     </div>
@@ -27,7 +27,7 @@
       <div class="row">
         <div class="slider-captions">
           <h1 class="slider-title">Besoin de dévérouiller votre cellulaire ?</h1>
-          <p class="slider-text"> Nos techniciens peuvent dévérouiller rapidement votre cellulaire et ainsivous permettre de l’utiliser avec la compagnie de votre choix.</p>
+          <p class="slider-text"> Nos techniciens peuvent dévérouiller rapidement votre cellulaire et ainsi vous permettre de l’utiliser avec l'opérateur de votre choix.</p>
         </div>
       </div>
     </div>
