--- a/app/views/static/pricing.html.erb
+++ b/app/views/static/pricing.html.erb
@@ -1,3 +1,21 @@
+<div class="page-header"><!-- page-header -->
+  <div class="container">
+    <div class="row page-section"><!-- page section -->
+      <div class="col-md-12 page-description"><!-- page description -->
+        <h1 class="page-title">Tarifs</h1>
+      </div>
+      <!-- page description --> 
+      
+    </div>
+    <!-- page section --> 
+  </div>
+  <div class="page-breadcrumb">
+    <ol class="breadcrumb">
+      <li><%= link_to "Accueil", root_path %></li>
+      <li class="active">Tarifs</li>
+    </ol>
+  </div>
+</div>
 <!-- /.page-header -->
 <div class="main-container"><!-- main container -->
   <div class="container">
@@ -32,7 +50,7 @@
               <li class="price-item"> <span class="price-amount"></span> Remplacement de Piles </li>
               <li class="price-item"> <span class="price-amount"></span> Remplacement de connecteur </li>
             </ul>
-            <%= link_to "Devis ", new_contact_path, class: "btn btn-default" %>
+            <%= link_to "Devis ", new_contact_path, class: "btn btn-salmon" %>
           </div>
         </div>
       </div>
