Add new pricing

--- a/app/views/static/pricing.html.erb
+++ b/app/views/static/pricing.html.erb
@@ -20,38 +20,25 @@
 <div class="main-container"><!-- main container -->
   <div class="container">
     <div class="row">
-      <div class="col-md-6 pricing-block"><!-- pricing block -->
-        <div class="pricing-head"><!-- pricing head -->
-          <h1 class="heading-white">Réparation iphone</h1>
+      <div class="col-md-offset-3 col-md-6 pricing-block"><!-- pricing block -->
+        <div class="pricing-head text-center"><!-- pricing head -->
+          <h1 class="heading-white">Réparation vitre</h1>
           
-        </div>
+        </div>`
         <!-- /.pricing head -->
         <div class="well-bg">
           <div class="well-inner">
             <ul class="price-list listnone check-circle">
               <!-- pricing list -->
-              <li class="price-item"> <span class="price-amount">$69.99</span> Remplacement de Vitre </li>
-              <li class="price-item"> <span class="price-amount">$29.99</span> Remplacement de Piles </li>
-              <li class="price-item"> <span class="price-amount">$29.99</span> Remplacement de connecteur </li>
+              <li class="price-item"> <span class="price-amount">$49</span> IPhone 4 </li>
+              <li class="price-item"> <span class="price-amount">$69</span> IPhone 5 / 5S / 5C / SE </li>
+              <li class="price-item"> <span class="price-amount">$99</span> Iphone 6 </li>
+              <li class="price-item"> <span class="price-amount">$129</span> Iphone 6 plus </li>
+              <li class="price-item"> <span class="price-amount">$194</span> Iphone 6S </li>
+              <li class="price-item"> <span class="price-amount">$269</span> Iphone 6S plus </li>
             </ul>
+            <p>Autres modèles ? Autres types de réparation ?</p><%= link_to "Contactez-nous", new_contact_path, class: "btn btn-salmon" %>
          </div>
-        </div>
-      </div>
-      <!-- /.pricing block -->
-      <div class="col-md-6 pricing-block"><!-- pricing block -->
-        <div class="pricing-head"><!-- pricing head -->
-          <h1 class="heading-white">Réparation autres modèles</h1>
-        </div>
-        <!-- /.pricing head -->
-        <div class="well-bg">
-          <div class="well-inner">
-            <ul class="price-list listnone check-circle">
-              <li class="price-item"> <span class="price-amount"></span> Remplacement de Vitre </li>
-              <li class="price-item"> <span class="price-amount"></span> Remplacement de Piles </li>
-              <li class="price-item"> <span class="price-amount"></span> Remplacement de connecteur </li>
-            </ul>
-            <%= link_to "Devis ", new_contact_path, class: "btn btn-salmon" %>
-          </div>
         </div>
       </div>
     </div>
