--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -117,7 +117,13 @@
               <div class="well-inner"> <i class="fa fa-clock-o"></i>
                 <h3>Heures d'ouverture</h3>
                 <ul class="listnone">
-                  <li>Lundi - Dimanche:<strong> 10am - 7pm</strong></li>
+                  <li>Lundi :<strong> Fermé</strong></li>
+                  <li>Mardi :<strong> 10h - 19h</strong></li>
+                  <li>Mercerdi :<strong> 10h - 19h</strong></li>
+                  <li>Jeudi :<strong> 10h - 19h</strong></li>
+                  <li>Vendredi :<strong> 10h - 19h</strong></li>
+                  <li>Samedi :<strong> 10h - 19h</strong></li>
+                  <li>Diamnche :<strong> 12h - 18h</strong></li>
                 </ul>
               </div>
             </div>
