--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,9 @@
       <div class="col-md-3 footer-widget">
         <h3 class="footer-widget-title">contact</h3>
         <p>990 Boulevard Pie-XI Sud, <br>Ville de Québec, QC G3K 1L2.</p>
-        <p>Lundi - Dimanche: 10am - 7pm.</p>
+        <p>Lundi : Fermé<br>
+           Mardi - Samedi : 10am - 7pm<br>
+           Dimanche : 12am - 6pm</p>
         <p>Cellulaire: 418-255-2139</p>
       </div>
       <div class="col-md-2 footer-widget">
